# booker-tee

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ALPHA_TESTING.md  ARCHITECTURE.md  DESIGN.md  DOMAIN_MODEL.md  Dockerfile  LICENSE  MVP.md  PROJECT_VISION.md  README.md  ROADMAP.md  UNKNOWN_STATEMENT_IMPORTER.md  USER_GUIDE.md  alembic.ini  compose.yaml  pyproject.toml  tailwind.config.js
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: 20260613_0001_phase1_parser_lab.py  20260613_0002_phase2_raw_transactions.py  20260613_0003_phase4_ledger_posting.py  20260613_0004_phase5_dedup_reparse.py  20260613_0005_phase6_categories_properties.py  20260613_0006_transaction_rules.py  20260613_0007_transaction_rule_application_mode.py  20260613_0008_russian_system_category_names.py  20260613_0009_import_mapping_templates.py  (+2 more)
scripts/: alpha-down.ps1  alpha-down.sh  alpha-reset.ps1  alpha-reset.sh  alpha-up.ps1  alpha-up.sh  ui_audit.py
src/app/: __init__.py  (+2 more)
tests/: test_account_detail_template.py  test_accounts.py  test_accounts_template.py  test_categories.py  test_health.py  test_import_detail_template.py  test_import_parsers.py  test_import_review_template.py  test_import_validation.py  test_imports.py  test_ledger.py  test_manual_operations_template.py  test_models.py  test_reference_templates.py  test_reports.py  test_reports_template.py  test_templating.py  test_transaction_rules.py  test_transaction_rules_template.py  test_unknown_statement_analysis.py  test_unknown_statement_mapping.py  test_user_guide_templates.py  test_users_workspaces.py
(+236 files in other folders)
