[project]
name = "booker-tee"
version = "0.1.0"
description = "Private financial statement importer and review workflow."
readme = "PROJECT_VISION.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "playwright>=1.60.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "UP",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]
